experimental/internal/lexer/testdata/strings/unclosed1.proto.stderr.txt
error: unterminated string literal
  --> testdata/strings/unclosed1.proto:1:1
   |
 1 | """
   | ^^^ expected to be terminated by `"""`

encountered 1 error
